--- a/challenge-1/workflow/sequential_workflow.ipynb
+++ b/challenge-1/workflow/sequential_workflow.ipynb
@@ -331,8 +331,8 @@
     "    \n",
     "    try:\n",
     "        # Configuration\n",
-    "        project_endpoint = os.environ.get(\"AI_FOUNDRY_PROJECT_ENDPOINT\")\n",
-    "        model_deployment_name = os.environ.get(\"MODEL_DEPLOYMENT_NAME\", \"gpt-4o-mini\")\n",
+    "        project_endpoint = os.environ.get(\"AI_FOUNDRY_ENDPOINT\")\n",
+    "        model_deployment_name = os.environ.get(\"MODEL_DEPLOYMENT_NAME\", \"gpt-4.1-mini\")\n",
     "        RISK_ANALYSER_AGENT_ID = os.getenv(\"RISK_ANALYSER_AGENT_ID\")\n",
     "        \n",
     "        if not RISK_ANALYSER_AGENT_ID:\n",
@@ -613,8 +613,8 @@
     "    \n",
     "    try:\n",
     "        # Configuration\n",
-    "        project_endpoint = os.environ.get(\"AI_FOUNDRY_PROJECT_ENDPOINT\")\n",
-    "        model_deployment_name = os.environ.get(\"MODEL_DEPLOYMENT_NAME\", \"gpt-4o-mini\")\n",
+    "        project_endpoint = os.environ.get(\"AI_FOUNDRY_ENDPOINT\")\n",
+    "        model_deployment_name = os.environ.get(\"MODEL_DEPLOYMENT_NAME\", \"gpt-4.1-mini\")\n",
     "        COMPLIANCE_REPORT_AGENT_ID = os.getenv(\"COMPLIANCE_REPORT_AGENT_ID\")\n",
     "        \n",
     "        # If no specific compliance agent, we can generate the report locally\n",
@@ -858,12 +858,12 @@
     "**Note**: In Jupyter notebooks, we use `await` directly instead of `asyncio.run()` because the notebook already runs in an asyncio event loop.\n",
     "\n",
     "The complete workflow will:\n",
-    "1. **Customer Data Analysis**: Retrieve transaction TX1001 from Cosmos DB and analyze risk factors\n",
+    "1. **Customer Data Analysis**: Retrieve transaction TX2002 from Cosmos DB and analyze risk factors\n",
     "2. **Risk Assessment**: Use Azure AI agent for regulatory compliance assessment  \n",
     "3. **Compliance Reporting**: Generate formal audit report with compliance ratings and recommendations\n",
     "4. **Return Structured Results**: Provide comprehensive audit documentation with actionable insights\n",
     "\n",
-    "This demonstrates a complete end-to-end compliance workflow using the Microsoft Agent Framework."
+    "This demonstrates a complete end-to-end compliance workflow using the Microsoft Agent Framework with transaction TX2002 analysis."
    ]
   },
   {
